[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=1]
[ext_resource path="res://assets/images/gui/universal/msinventory.png" type="Texture" id=2]
[ext_resource path="res://assets/images/gui/universal/mspanel2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/universal/msbutton_default.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/universal/msheroes.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/universal/msmenu.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/universal/msbutton_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/images/gui/universal/msbutton_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/universal/msvillage.png" type="Texture" id=9]
[ext_resource path="res://assets/images/iconsitems/Food.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/mainfont_bold_36.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/fonts/mainfont_100.tres" type="DynamicFont" id=12]
[ext_resource path="res://files/scenes/MainTheme.tres" type="Theme" id=13]
[ext_resource path="res://assets/images/gui/universal/msworld.png" type="Texture" id=14]
[ext_resource path="res://files/scenes/MenuPanel.tscn" type="PackedScene" id=15]
[ext_resource path="res://files/SFX/black.png" type="Texture" id=16]
[ext_resource path="res://tooltip_theme.tres" type="Theme" id=17]
[ext_resource path="res://assets/images/gui/buildings/buttonhl.png" type="Texture" id=18]
[ext_resource path="res://assets/images/gui/buildings/button.png" type="Texture" id=19]
[ext_resource path="res://assets/images/gui/buildings/buttonpress.png" type="Texture" id=20]
[ext_resource path="res://assets/fonts/mainfont_40.tres" type="DynamicFont" id=21]
[ext_resource path="res://files/scenes/Inventory.tscn" type="PackedScene" id=23]
[ext_resource path="res://files/scenes/HeroList.tscn" type="PackedScene" id=24]
[ext_resource path="res://assets/images/gui/universal/heroline.png" type="Texture" id=25]
[ext_resource path="res://assets/images/gui/inventory/inventory.png" type="Texture" id=26]
[ext_resource path="res://files/scenes/ControlPanel.gd" type="Script" id=28]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 649, 788 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 1188, 154 )

[node name="menu_node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 28 )
menu_home_icon = ExtResource( 9 )
menu_world_icon = ExtResource( 14 )

[node name="ControlPanel" type="TextureRect" parent="."]
margin_left = 111.0
margin_top = 868.0
margin_right = 765.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="TextureButton" parent="ControlPanel"]
margin_left = 40.0
margin_top = 40.0
margin_right = 161.0
margin_bottom = 161.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="ControlPanel/Return"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -43.5
margin_right = 44.0
margin_bottom = 43.5
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="ControlPanel/Return"]
margin_left = -10.0
margin_top = 130.0
margin_right = 132.0
margin_bottom = 154.0
grow_horizontal = 2
text = "MENU_HOME"
align = 1
clip_text = true

[node name="Inventory" type="TextureButton" parent="ControlPanel"]
margin_left = 191.0
margin_top = 40.0
margin_right = 312.0
margin_bottom = 161.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ControlPanel/Inventory"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.5
margin_top = -43.5
margin_right = 44.5
margin_bottom = 43.5
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="ControlPanel/Inventory"]
margin_left = -14.0
margin_top = 130.0
margin_right = 136.0
margin_bottom = 154.0
text = "MENU_INV"
align = 1
clip_text = true

[node name="Herolist" type="TextureButton" parent="ControlPanel"]
margin_left = 342.0
margin_top = 40.0
margin_right = 463.0
margin_bottom = 161.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="ControlPanel/Herolist"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -45.0
margin_right = 44.0
margin_bottom = 45.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="ControlPanel/Herolist"]
margin_left = -11.0
margin_top = 130.0
margin_right = 131.0
margin_bottom = 154.0
text = "MENU_HEROS"
align = 1
clip_text = true

[node name="Options" type="TextureButton" parent="ControlPanel"]
margin_left = 493.0
margin_top = 40.0
margin_right = 614.0
margin_bottom = 161.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ControlPanel/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -45.0
margin_right = 44.0
margin_bottom = 45.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ControlPanel/Options"]
margin_left = -12.0
margin_top = 130.0
margin_right = 137.0
margin_bottom = 154.0
text = "MENU_OPTION"
align = 1
clip_text = true

[node name="Gold" type="Label" parent="ControlPanel"]
margin_left = 1631.0
margin_top = -840.0
margin_right = 1709.0
margin_bottom = -802.0
grow_horizontal = 0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 11 )
text = "Gold"
align = 2

[node name="Food" type="Label" parent="ControlPanel"]
visible = false
margin_left = 1655.0
margin_top = -882.0
margin_right = 1714.0
margin_bottom = -858.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Food"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_combat" type="Button" parent="."]
visible = false
margin_left = 15.0
margin_top = 966.0
margin_right = 97.0
margin_bottom = 1051.0
text = "test c"
clip_text = true

[node name="test_event" type="Button" parent="."]
visible = false
margin_left = 15.0
margin_top = 862.0
margin_right = 97.0
margin_bottom = 947.0
text = "test e"
clip_text = true

[node name="foodicon" type="TextureRect" parent="."]
visible = false
margin_left = 1835.0
margin_top = 61.0
margin_right = 1909.0
margin_bottom = 133.0
hint_tooltip = "FOODDESCRIPT"
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goldicon" type="TextureRect" parent="."]
margin_left = 1820.0
margin_top = -9.0
margin_right = 1925.0
margin_bottom = 86.0
hint_tooltip = "GOLDDESCRIPT"
theme = ExtResource( 17 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Inventory" parent="." groups=["pauseprocess"] instance=ExtResource( 23 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -324.5
margin_top = -394.0
margin_right = 324.5
margin_bottom = 394.0
theme = ExtResource( 13 )
custom_styles/panel = SubResource( 1 )

[node name="HeroList" parent="." instance=ExtResource( 24 )]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1003.0
margin_top = -154.0
margin_right = -22.0
margin_bottom = 0.0
custom_styles/panel = SubResource( 2 )

[node name="SystemMessageLabel" type="RichTextLabel" parent="."]
margin_left = 29.0
margin_top = 919.0
margin_right = 1901.0
margin_bottom = 958.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 0.890625, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/normal_font = ExtResource( 21 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPanel" parent="." groups=["pauseprocess"] instance=ExtResource( 15 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = -221.0
margin_right = 183.0
margin_bottom = 221.0

[node name="BlackScreen" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 16 )
expand = true

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="Label" parent="GameOverPanel"]
margin_left = 582.0
margin_top = 207.0
margin_right = 1296.0
margin_bottom = 454.0
custom_fonts/font = ExtResource( 12 )
text = "Game Over"
align = 1
valign = 1

[node name="ExitButton" type="TextureButton" parent="GameOverPanel"]
margin_left = 806.0
margin_top = 587.0
margin_right = 1099.0
margin_bottom = 666.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 18 )

[node name="Label" type="Label" parent="GameOverPanel/ExitButton"]
margin_left = 21.0
margin_top = 23.0
margin_right = 265.0
margin_bottom = 47.0
text = "Return to Main Menu"
